<resources>
    <string name="app_name">Blue Sea</string>
    <string name="signup">إنشاء حساب</string>
    <string name="username">اسم المستخدم</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">كلمة السر</string>
    <string name="have_an_account">لديك حساب؟</string>
    <string name="dont_have_an_account">ليس لديك حساب؟</string>
    <string name="log_in">تسجيل دخول</string>
    <string name="log_in_failed">فشل في تسجيل دخول</string>
    <string name="date_sample">29 أبريل</string>
    <string name="available_seats">مقاعد متوفرة</string>
    <string name="booked">محجوز</string>
    <string name="book">احجز</string>
    <string name="trip_status">حالة الرحلة</string>
    <string name="to_destination">إلى الوجهة</string>
    <string name="read_permission_needed_to_access_files">صلاحية الوصول الى الملفات مطلوبة لقراءة الصور والاصوات من جهارك</string>
    <string name="location_permission_needed">صلاحية قراءة الموقع مطلوبة لعرض موقعك على الخرائط</string>
    <string name="photo_selection_error">فشل في الوصول الى الصور</string>
    <string name="choose_photo">اختر صورة</string>
    <string name="invalid_email">الايميل غير صالح</string>
    <string name="invalid_password">كلمة المرور قصيرة</string>
    <string name="error_msg_username">لا يمكن أن يكون اسم المستخدم فارغا فارغًا</string>
    <string name="add_image">يجب اضافة صورة</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="change_password">تغيير كلمة السر</string>
    <string name="forgot_password">هل نسيت كلمة السر</string>
    <string name="edit_profile">تعديل معلومات الحساب</string>
    <string name="profile">معلومات الحساب</string>
    <string name="current_password">كلمة السر الحالية</string>
    <string name="new_password">كلمة السر الجديدة</string>
    <string name="confirm_password">اعادة كلمة السر الجديدة</string>
    <string name="save">حفظ</string>
    <string name="submit">ارسال</string>
    <string name="send_link">لقد قمنا بارسال بريدا الكترونيا لاعادة تعيين كلمة المرور</string>
    <string name="enter_email">ادخل البريد الالكتروني وسوف نرسل لك رابطا لاعادة تعيين كلمة المرور</string>
    <string name="cancel_trip">الغاء الرحلة</string>
    <string name="no_available_seat">لايوجد اماكن متاحة</string>
    <string name="no_trip_available">ليس هناك رحلات متاحة حاليا</string>
    <string name="my_account">حسابي</string>
    <string name="change_password_successfully">تم تغيير كلمة المرور بنجاح</string>
    <string name="password_has_not_been_changed">لم يتم تغيير كلمة المرور بنجاح</string>
    <string name="error_msg_current_password">current password can\'t be empty</string>
    <string name="error_msg_new_password">new password can\'t be empty</string>
    <string name="error_msg_confirm_password">confirm password can\'t be empty</string>

</resources>